# PyPixPro

./: .gitignore  Creating Python App Icons.txt  Info.plist  PyPixPro.spec.txt  README.md  main.py  pypixpro code structure.txt  pypixpro text structure.txt  pypixprobuild.zsh  pypixpro–code  pyproject.toml  requirements.txt  setup.py
Resources/: DISCLAIMER.md
docs/: CHANGELOG.md  DMG_BUILD_README.md
src/pypixpro/: main.py  utils.py
src/pypixpro/core/: __init__.py  processor.py
src/pypixpro/gui/: __init__.py  main_window.py
